--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@
 .logo{   
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+    height: 7rem;
 }
 .head2{
     background-color: #ff0000;
@@ -48,7 +49,7 @@
     top: 0%;
     left: 0%;
     /* transform: translate(-50%, -50%); */
-    background:rgba(0, 64, 255,0.6);
+    background:rgba(0, 0, 27, 0.77);
     height: 50vh;
     width: 100%;
 }
